Print name of log source during failed readLogSource()

BUG=778473
R=afakhry@chromium.org, tbarzic@chromium.org

Change-Id: I18de052ef94fffae63a93d9a09527d16ff845579
Reviewed-on: https://chromium-review.googlesource.com/737441
Commit-Queue: Simon Que <sque@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511685}
Former-commit-id: fa02b4fcc906e0175cbdc3446ecb3fbea74c3d37